# youtobe-workflow

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml  server-ci.yml
scripts/: deploy_update.sh  e2e_local.sh  package_bundle.sh  rollback_last.sh
server/: CMakeLists.txt  Dockerfile
server/docs/: RPD.md
server/include/: api_server.h  asr_worker.h  audio_convert_worker.h  compose_worker.h  merge_worker.h  subtitle_embed_worker.h  task_manager.h
server/src/: api_server.cpp  asr_worker.cpp  audio_convert_worker.cpp  compose_worker.cpp  main.cpp  merge_worker.cpp  subtitle_embed_worker.cpp  task_manager.cpp
server/tests/: test_asr_worker.cpp  test_audio_convert_worker.cpp  test_compose_worker.cpp  test_integration_flow.cpp  test_merge_worker.cpp  test_subtitle_embed_worker.cpp  test_task_manager.cpp
